<resources>
    <string name="app_name">B2 Audio</string>
    <string name="ok">OK</string>
    <string name="web_language">siteLanguage=2</string>
    <string name="action_settings">Setting</string>
    <string name="turn_on_bt">Turn on Bluetooth</string>
    <string name="search">Search</string>
    <string name="searching">Searching</string>
    <string name="searched">Searched</string>
    <string name="bt_turned_on">Bluetooth turned on</string>
    <string name="paired">[Paired]</string>
    <string name="on">Bluetooth on</string>
    <string name="off">Bluetooth off</string>
    <string name="Visible">Visibility</string>
    <string name="List">Search</string>
    <string name="avaible_devics">Available devices</string>
    <string name="unknow_name">Unname</string>
    <string name="unknow_address">Unknow address</string>
    <string name="exit_hint">Exit</string>
    <string name="rssi">RSSI</string>
    <string name="addr">Address</string>
    <string name="disConnectTime">Disconnect time</string>
    <string name="none">none</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="bluetooth_not_supported">Bluetooth not supported</string>
    <string name="start">Start</string>
    <string name="state">State</string>
    <string name="communication">Communication</string>
    <string name="disConnect">Disconnect</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="connectFail">The connection fails</string>
    <string name="wait">Please wait for a while</string>
    <string name="hex_re">Hex Rx</string>
    <string name="hex_se">Hex Tx</string>
    <string name="clear">Clear</string>
    <string name="receive">Rx</string>
    <string name="send">Tx</string>
    <string name="Byte">B</string>
    <string name="Package">P</string>
    <string name="intervalSend">Timing</string>
    <string name="btnSend">Send</string>
    <string name="btnSendFile">File</string>
    <string name="stop">Stop</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="openSendFileError">Open file error</string>
    <string name="selectDfu">Please select a dfu file</string>
    <string name="selectirmware">Please select the firmware</string>
    <string name="doNotApply">Do not apply</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="company">Company</string>
    <string name="company_name">Sintegrate Technology Co.,Ltd.</string>
    <string name="tel">Tel</string>
    <string name="web">Website</string>
    <string name="mail">E-mail</string>
    <string name="wc">WeChat Official AC</string>
    <string name="about_app">About APP</string>
    <string name="version_app">Version</string>
    <string name="inquiry">Inquiry</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="refreshing">Refreshing</string>
    <string name="not_updated_yet">Do not updated yet</string>
    <string name="updated_at">Updated at %1$s</string>
    <string name="updated_just_now">Updated just now</string>
    <string name="time_error">Time error</string>
    <string name="title_activity_dsp_main">dsp_main</string>
    <string name="sie_dsp">SIE_DSP</string>
    <string name="vol">volume:</string>
    <string name="mavol">volume:</string>
    <string name="title_activity_dsp_setting">dsp_setting</string>
    <string name="connet_status">Not connected</string>
    <string name="title_activity_dsp_setting_delay">dsp_setting_delay</string>
    <string name="title_activity_bsp_setting_chanel">bsp_setting_chanel</string>
    <string name="title_activity_dsp_setting_main">dsp_setting_main</string>
    <string name="text_back">Back</string>
    <string name="text_stauts">status</string>
    <string name="welcome_logo">DCP461 for Android V</string>
    <string name="app_versions">2.04</string>
    <string name="mcu_versions">KL461-V1.02</string>
    <string name="device">Device Version</string>
    <string name="apps">Software Version</string>
    <string name="version_error">Connection fail，the version not match，Please update!</string>
    <string name="exit">Exit</string>
    <string name="online_link">Connection with WIFI</string>
    <string name="offline_link">Disonnection</string>
    <string name="off_audioauto">Close the automatic input</string>
    <string name="on_audioauto">Open the automatic input</string>
    <string name="ST_BT_DISCONNECT">Disconnect</string>
    <string name="ST_BT_OFF_LINE">Off-line</string>
    <string name="ST_BT_IS_OPEN">is open…</string>
    <string name="ST_BT_IS_CLOSE">is close…</string>
    <string name="ST_BT_IN_SYNC">In syncing…</string>
    <string name="ST_BT_CONNECTED">Connected</string>
    <string name="BT_TimeOutMsg">Bluetooth connection timeout, please determine whether the correct pairing device. If correct, please manually restart Bluetooth, and then connect。</string>
    <string name="off_line_mode">Off-line!</string>
    <string name="off_line_mode_no_connected">Off-line</string>
    <string name="Again_exit">Again according to the exit</string>
    <string name="connected_device_ok">Online mode!</string>
    <string name="On_line_connected_device_ok">Online mode</string>
    <string name="SynDataSucess">SynDataSucess!</string>
    <string name="Updataing">Is updating data</string>
    <string name="please_wait">Please wait......</string>
    <string name="Connect_please_wait">Connecting, Please wait......</string>
    <string name="Close_please_wait">Closing, Please wait......</string>
    <string name="SynData">In syncing#8230</string>
    <string name="Open_wifi">Please open the wifi,connect to DSP Audio-xxx wireless!</string>
    <string name="Digital">Digital</string>
    <string name="High">High level</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="Aux1">AUX1</string>
    <string name="Aux2">AUX2</string>
    <string name="Aux3">AUX3</string>
    <string name="BtnBack">Back</string>
    <string name="Bluetooth_Sel">Select device</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Connecting">Connecting</string>
    <string name="Connect">Connect</string>
    <string name="Status">Status</string>
    <string name="Open">Open</string>
    <string name="Receive">Receive contents</string>
    <string name="Send">Send contents</string>
    <string name="BtnSend">Send</string>
    <string name="BTStateConnect">Bluetooth Connected</string>
    <string name="BTStateDisconnect">Bluetooth Disconnect</string>
    <string name="online_link_bt">Connection with Bluetooth</string>
    <string name="offline_link_bt">Disconnect Bluetooth</string>
    <string name="Open_BT">Please open the Bluetooth,connect to DSP HD</string>
    <string name="Home">Home</string>
    <string name="About">About</string>
    <string name="Store">Store</string>
    <string name="Set">Settings</string>
    <string name="Help">Help</string>
    <string name="Save">Save</string>
    <string name="HoldSave">Hold On and Save</string>
    <string name="delete">Delete</string>
    <string name="opt_Store">This operation will cover this group of data!?</string>
    <string name="opt_delete">This operation will delete this group of data!?</string>
    <string name="SoundOpt">Sound operation</string>
    <string name="GroupOpt">Sound selection</string>
    <string name="SetGroupName">Please enter a sound name</string>
    <string name="sel_user_group">Select the user group, please</string>
    <string name="Loading">Loading......</string>
    <string name="Saving">Saving......</string>
    <string name="Save_success">Save success !</string>
    <string name="device_version">Device Version：</string>
    <string name="Software_version">Software version：</string>
    <string name="Copyright">Copyright：Copyright©</string>
    <string name="IMMToHSet">Please enter the password to enter the advanced settings</string>
    <string name="MMError">Password error!</string>
    <string name="Encryption">Encryption</string>
    <string name="Deciphering">Deciphering</string>
    <string name="SetEncryption">Please set the encryption password</string>
    <string name="SetDeciphering">Please enter the decryption password</string>
    <string name="PasswordIncorrect">Please enter the correct password</string>
    <string name="Password">Password:</string>
    <string name="HadEncryption">Data is encrypted</string>
    <string name="EncryptionSet">Data encryption settings</string>
    <string name="EncryptionClean">Empty data</string>
    <string name="SetEncryptionClean">Clear encrypted data</string>
    <string name="EncryptionCleanSet">This action will clear the current set of encrypted data, restore the default</string>
    <string name="EncryptionSave">Data conversion, please do not interrupt</string>
    <string name="DataProtection">Data Protection</string>
    <string name="Decrypt">Decrypt</string>
    <string name="HighSettings">Advanced settings</string>
    <string name="GetDate">Get Data</string>
    <string name="BackTOMain">Back</string>
    <string name="FREQ_ALL">1-Way</string>
    <string name="FREQ_TWO">2-Way</string>
    <string name="MSUB_VAL">Bass volume</string>
    <string name="MSUB_SetCh">Please set the bass channel first</string>
    <string name="SignalInput">Signal Input</string>
    <string name="Output4.0">4.0</string>
    <string name="Output4.1">4.1</string>
    <string name="Mute">Mute</string>
    <string name="InputSelect">Input Select</string>
    <string name="Memory">ReCall</string>
    <string name="MainValume">MainValume</string>
    <string name="Valume">Valume</string>
    <string name="CD">CD</string>
    <string name="AUX">AUX</string>
    <string name="ADC">ADC</string>
    <string name="Digit">S/PDIF</string>
    <string name="Hi_Level">Hi.Level</string>
    <string name="Buletooth">Buletooth</string>
    <string name="AUX1">AUX1</string>
    <string name="AUX2">AUX2</string>
    <string name="AUX3">AUX3</string>
    <string name="Hi.LevelMode">Hi.Level Mode</string>
    <string name="Way1">1-Way</string>
    <string name="Way2">2-Way</string>
    <string name="AUXMode">AUX Mode</string>
    <string name="T2CH">2CH</string>
    <string name="F4CH2CH">4CH 2CH</string>
    <string name="S6CH">6CH</string>
    <string name="CH0">CH0</string>
    <string name="CH1">CH1</string>
    <string name="CH2">CH2</string>
    <string name="CH3">CH3</string>
    <string name="CH4">CH4</string>
    <string name="CH5">CH5</string>
    <string name="CH6">CH6</string>
    <string name="CH7">CH7</string>
    <string name="CH8">CH8</string>
    <string name="CH9">CH9</string>
    <string name="CH10">CH10</string>
    <string name="CH11">CH11</string>
    <string name="CH12">CH12</string>
    <string name="GLink">Group:</string>
    <string name="G0">G0:</string>
    <string name="G1">G1:</string>
    <string name="G2">G2:</string>
    <string name="G3">G3:</string>
    <string name="G4">G4:</string>
    <string name="G5">G5:</string>
    <string name="G6">G6:</string>
    <string name="G7">G7:</string>
    <string name="G8">G8:</string>
    <string name="G9">G9:</string>
    <string name="G10">G10:</string>
    <string name="G11">G11:</string>
    <string name="G12">G12:</string>
    <string name="DigtalInput">Digtal Input</string>
    <string name="Optical">Optical</string>
    <string name="Coaxial">Coaxial</string>
    <string name="Phone">Phone</string>
    <string name="UserName">Name:</string>
    <string name="UnitdB">Unit:dB</string>
    <string name="Sound_EFF1">Effect 1</string>
    <string name="Sound_EFF2">Effect 2</string>
    <string name="Sound_EFF3">Effect 3</string>
    <string name="Sound_EFF4">Effect 4</string>
    <string name="Sound_EFF5">Effect 5</string>
</resources>